syntax = "proto3";

package gamepb.illustratedpb;

import "corepb.proto";

message GetIllustratedListV2Request {
    bool refresh = 1;
    bool full = 2;
}

message IllustratedItem {
    int64 seed_id = 1;
    bool unlocked = 2;
    bool planted = 3;
    int32 planted_count = 4;
    int32 harvest_count = 5;
    int32 category = 6;
    bytes reward_info = 7;
    bool has_reward = 8;
}

message GetIllustratedListV2Reply {
    repeated IllustratedItem items = 1;
}

message ClaimAllRewardsV2Request {
    bool only_claimable = 1;
}

message ClaimAllRewardsV2Reply {
    repeated corepb.Item items = 1;
    repeated corepb.Item bonus_items = 4;
}

message IllustratedRewardRedDotNotifyV2 {}
